Fix for bug 485961 -  MMgc code cleanup items based on MMgc code review (r=treilly+)